<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/display_panel"
            android:layout_height="100dp"
            android:layout_width="match_parent"
            android:background="#FFFFFF"
            android:text=""
            android:textSize="30dp"
            android:gravity="right"
            android:paddingRight="10dp"
            />

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/first_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/second_row"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button7"
                        />
                    <Button
                        android:id="@+id/button8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button8"
                        />
                    <Button
                        android:id="@+id/button9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button9"
                        />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/third_row"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button4"
                        />
                    <Button
                        android:id="@+id/button5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button5"
                        />
                    <Button
                        android:id="@+id/button6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button6"
                        />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/fourth_row"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button1"
                        />
                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button2"
                        />
                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button3"
                        />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/fifth_row"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_dec"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dec"
                        />
                    <Button
                        android:id="@+id/button0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button0"
                        />
                    <Button
                        android:id="@+id/button_equal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/equal"
                        />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_del"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    />
                <Button
                    android:id="@+id/button_div"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/div"
                    />
                <Button
                    android:id="@+id/button_mult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mult"
                    />
                <Button
                    android:id="@+id/button_sub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sub"
                    />
                <Button
                    android:id="@+id/button_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>
